fixed appearance on mobile devices

--- a/assets/css/_mixins.scss
+++ b/assets/css/_mixins.scss
@@ -33,7 +33,7 @@
 }
 
 @mixin container {
-  max-width: 1280px;
+  max-width: min(1280px, 100vw);
   margin: auto;
   padding: 0 40px;
 
